--- a/vistas/proyecto.html
+++ b/vistas/proyecto.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto</title>
-    <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/estilos.css">
-</head>
-<body>
-    <header class="header">
-        <div class="contenedor">
-            <div class="header__logo">
-                <img src="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" alt="logo"></div>
-            <nav class="header__nav">
-                <ul class="header__ul">
-                    <li class="header__li"><a class="header__a" href="../index.html">Inicio</a></li>
-                    <li class="header__li"><a class="header__a" href="./equipo.html">Equipo</a></li>
-                    <li class="header__li"><a class="header__a" href="./tienda.html">Tienda</a></li>
-                    <li class="header__li"><a class="header__a" href="./contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <head>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <!-- AOS -->
+        <script src="https://kit.fontawesome.com/c7f9ac558a.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bitter&family=Oswald:wght@500;700&display=swap" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Equipo</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
+        <link rel="stylesheet" href="../css/estilos.css">
+    </head>
+    <body>
+        <header class="header">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container div__nav">
+                        <img src="../img/logo.jpg" height="100px" class="header_logo" alt="logo">
+                        <button class="navbar-toggler ico__borde" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon ico__ham" ></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                            <ul class="navbar-nav nav__menu">
+                                <li class="nav-item">
+                                    <a class="nav-link active--menu blanco" aria-current="page" href="../vistas/proyecto.html">Proyecto</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link blanco" href="../index.html">Index</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link blanco" href="../vistas/equipo.html">Equipo</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link blanco" href="./vistas/tienda.html">Tienda</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link blanco" href="./vistas/contacto.html">Contacto</a>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+        </header>
     <main class="main__proyect">
         <div><h1 class="mascotasinf__h1">Mascotas Exóticas</h1></div>
         <section class="slider">
@@ -78,11 +98,11 @@
         <div class="contenedor">
             <nav class="footer__nav">
                 <ul class="footer__ul">
-                    <li class="footer__li"><a class="footer__a" href="../index.html">Inicio</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./proyecto.html">Proyecto</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./equipo.html">Equipo</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./tienda.html">Tienda</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./contacto.html">Contacto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="index.html">Inicio</a></li>
+                    <li class="footer__li"><a class="footer__a" href="./vistas/proyecto.html">Proyecto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="./vistas/equipo.html">Equipo</a></li>
+                    <li class="footer__li"><a class="footer__a" href="./vistas/tienda.html">Tienda</a></li>
+                    <li class="footer__li"><a class="footer__a" href="./vistas/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -98,5 +118,12 @@
             </nav>
         </div>
     </footer>
+    <script>
+        AOS.init({
+            once: true,
+        }
+        );
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
