--- a/vistas/proyecto.html
+++ b/vistas/proyecto.html
@@ -34,10 +34,10 @@
                                     <a class="nav-link blanco" href="../vistas/equipo.html">Equipo</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="./vistas/tienda.html">Tienda</a>
+                                    <a class="nav-link blanco" href="../vistas/tienda.html">Tienda</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="./vistas/contacto.html">Contacto</a>
+                                    <a class="nav-link blanco" href="../vistas/contacto.html">Contacto</a>
                             </ul>
                         </div>
                     </div>
@@ -45,18 +45,40 @@
         </header>
     <main class="main__proyect">
         <div><h1 class="mascotasinf__h1">Mascotas Exóticas</h1></div>
-        <section class="slider">
-            <div class="contenedor">
-                <nav class="slider__nav">
-                    <ul class="slider__ul">
-                        <li class="slider__li"><img class="slider__img" src="../img/chinchilla.jpg" alt="foto1"></li>
-                        <li class="slider__li"><img class="slider__img" src="../img/cobaya.jpeg" alt="foto2"></li>
-                        <li class="slider__li"><img class="slider__img" src="../img/conejo.jpg" alt="foto3"></li>
-                        <li class="slider__li"><img class="slider__img" src="../img/Erizo1.jpg" alt="foto4"></li>
-                        <li class="slider__li"><img class="slider__img" src="../img/huron.jpg" alt="foto5"></li>
-                        <li class="slider__li"><img class="slider__img" src="../img/hamster.jpg" alt="foto6"></li>
-                    </ul>
-                </nav>
+        <section class="container-fluid">
+            <div class="row">
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../img/cobayo2.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/Chinchillax.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/conejo.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/erizox.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/hamster.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/uron.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+        </section>
             </div>
         </section>
         <section class="mascotasinf">
@@ -98,11 +120,11 @@
         <div class="contenedor">
             <nav class="footer__nav">
                 <ul class="footer__ul">
-                    <li class="footer__li"><a class="footer__a" href="index.html">Inicio</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/proyecto.html">Proyecto</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/equipo.html">Equipo</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/tienda.html">Tienda</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/contacto.html">Contacto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../index.html">Inicio</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/proyecto.html">Proyecto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/equipo.html">Equipo</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/tienda.html">Tienda</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
