--- a/vistas/equipo.html
+++ b/vistas/equipo.html
@@ -34,10 +34,10 @@
                                     <a class="nav-link blanco" href="../vistas/proyecto.html">Proyecto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="./vistas/tienda.html">Tienda</a>
+                                    <a class="nav-link blanco" href="../vistas/tienda.html">Tienda</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="./vistas/contacto.html">Contacto</a>
+                                    <a class="nav-link blanco" href="../vistas/contacto.html">Contacto</a>
                             </ul>
                         </div>
                     </div>
@@ -80,11 +80,11 @@
         <div class="contenedor">
             <nav class="footer__nav">
                 <ul class="footer__ul">
-                    <li class="footer__li"><a class="footer__a" href="index.html">Inicio</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/proyecto.html">Proyecto</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/equipo.html">Equipo</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/tienda.html">Tienda</a></li>
-                    <li class="footer__li"><a class="footer__a" href="./vistas/contacto.html">Contacto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../index.html">Inicio</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/proyecto.html">Proyecto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/equipo.html">Equipo</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/tienda.html">Tienda</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../vistas/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
