--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -100,7 +100,7 @@
                     <li class="infocontact__lista--items">Teléfono: 555-121212</li>
                     <li class="infocontact__lista--items">Horario: 08am a 19pm</li>
                     <br>
-                    <li class="infocontact__lista--items"><a href="https://www.paypal.com/es/webapps/mpp/charity#:~:text=Una%20vez%20en%20en%20tu,PayPal%20para%20hacer%20su%20donativo.&text=Antes%20de%20confirmar%2C%20tiene%20que,o%20suscribirse%20a%20donativos%20peri%C3%B3dicos.&text=Despu%C3%A9s%2C%20revisa%20y%20confirma%20el,y%20sus%20datos%20de%20facturaci%C3%B3n.&text=Por%20%C3%BAltimo%2C%20el%20donante%20recibe%20una%20confirmaci%C3%B3n.">Donaciones</a></li>
+                    <li class="infocontact__lista--items"><a href="https://www.paypal.com/es/webapps/mpp/charity#:~:text=Una%20vez%20en%20en%20tu,PayPal%20para%20hacer%20su%20donativo.&text=Antes%20de%20confirmar%2C%20tiene%20que,o%20suscribirse%20a%20donativos%20peri%C3%B3dicos.&text=Despu%C3%A9s%2C%20revisa%20y%20confirma%20el,y%20sus%20datos%20de%20facturaci%C3%B3n.&text=Por%20%C3%BAltimo%2C%20el%20donante%20recibe%20una%20confirmaci%C3%B3n." target="_blank">Donaciones</a></li>
                 </ul>
             </div>
         </section>
@@ -134,7 +134,7 @@
     </footer>
     <script>
         AOS.init({
-            once: true,
+            once: false,
         }
         );
     </script>
