--- a/vistas/equipo.html
+++ b/vistas/equipo.html
@@ -102,7 +102,7 @@
     </footer>
     <script>
         AOS.init({
-            once: true,
+            once: false,
         }
         );
     </script>
