--- a/vistas/proyecto.html
+++ b/vistas/proyecto.html
@@ -142,7 +142,7 @@
     </footer>
     <script>
         AOS.init({
-            once: true,
+            once: false,
         }
         );
     </script>
