--- a/vistas/tienda.html
+++ b/vistas/tienda.html
@@ -167,7 +167,7 @@
     </footer>
     <script>
         AOS.init({
-            once: true,
+            once: false,
         }
         );
     </script>
