--- a/vistas/proyecto.html
+++ b/vistas/proyecto.html
@@ -18,7 +18,7 @@
         <header class="header">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container div__nav">
-                        <img src="../img/logo.jpg" height="100px" class="header_logo" alt="logo">
+                        <img src="../img/logo.jpg" data-aos="flip-up" height="100px" class="header_logo" alt="logo">
                         <button class="navbar-toggler ico__borde" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon ico__ham" ></span>
                         </button>
