anidaciones y arreglos de links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/compilado.css">
 </head>
 <body>
     <header class="header">
@@ -28,16 +28,16 @@
                                 <a class="nav-link active--menu blanco" aria-current="page" href="./index.html">Index</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link blanco" href="./vistas/proyecto.html">Proyecto</a>
+                                <a class="nav-link blanco" href="./mascotas/proyecto.html">Proyecto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link blanco" href="./vistas/equipo.html">Equipo</a>
+                                <a class="nav-link blanco" href="./contacto/equipo.html">Equipo</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link blanco" href="./vistas/tienda.html">Tienda</a>
+                                <a class="nav-link blanco" href="./mascotas/tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link blanco" href="./vistas/contacto.html">Contacto</a>
+                                <a class="nav-link blanco" href="./contacto/contacto.html">Contacto</a>
                         </ul>
                     </div>
                 </div>
@@ -46,14 +46,14 @@
     <main class="main">
         <section class="hero">
             <h1 class="hero__h1">Club de Mascotas Exóticas</h1>
-            <button class="hero__button"><a href="./vistas/tienda.html">Elige tu Mascota</a></button>
+            <button class="hero__button"><a href="./mascotas/tienda.html">Elige tu Mascota</a></button>
         </section>
         <section class="negocio">
             <div class="contenedor">
                 <div class="negocio__div">
                     <img class="negocio__img" src="./img/mujer-conejo.jpg" alt="animales">
                     <h2 class="negocio__h2">Quienes Somos</h2>
-                    <p class="negocio__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sapiente sit deserunt ex omnis nihil nesciunt repellat quod magni soluta nulla dolores rerum fuga est dicta at, maxime molestias incidunt voluptatum eveniet vitae non consectetur velit distinctio. Vel officiis iste facere molestias culpa labore repudiandae, at quos! Atque, similique soluta.</p>
+                    <p class="negocio__p">Somos una empresa familiar con 20 años de experiencia en el asesoramiento y venta de productos y servicios para una gran diversidad de mascotas, tradicionales y exóticas. <br>Contamos con tiendas distribuidos estratégicamente para estar lo mas cerca posible de las familias uruguayas que buscan cuidar y mimar a sus pequeños amigos o que optan simplemente por visitarnos para pasar un momento especial con las mascotas que allí se encuentran. <br> Preferimos y pregonamos un modelo de contacto basado en el trato personal y dedicado de nuestros colaboradores con los clientes que concurren a nuestras tiendas en busca de “lo mejor, para su mejor amigo”.</p>
                 </div>
             </div>
         </section>
@@ -82,7 +82,7 @@
         </section>
         <section class="contact">
             <h2 class="contact__h2">Aún tienes dudas?</h2>
-            <button class="contact__btn" data-aos="fade-down"><a href="./vistas/contacto.html">Contáctanos</a></button>
+            <button class="contact__btn" data-aos="fade-down"><a href="./contacto/contacto.html">Contáctanos</a></button>
         </section>
     </main>    
         <footer class="footer">
@@ -90,10 +90,10 @@
                 <nav class="footer__nav">
                     <ul class="footer__ul">
                         <li class="footer__li"><a class="footer__a" href="index.html">Inicio</a></li>
-                        <li class="footer__li"><a class="footer__a" href="./vistas/proyecto.html">Proyecto</a></li>
-                        <li class="footer__li"><a class="footer__a" href="./vistas/equipo.html">Equipo</a></li>
-                        <li class="footer__li"><a class="footer__a" href="./vistas/tienda.html">Tienda</a></li>
-                        <li class="footer__li"><a class="footer__a" href="./vistas/contacto.html">Contacto</a></li>
+                        <li class="footer__li"><a class="footer__a" href="./mascotas/proyecto.html">Proyecto</a></li>
+                        <li class="footer__li"><a class="footer__a" href="./contacto/equipo.html">Equipo</a></li>
+                        <li class="footer__li"><a class="footer__a" href="./mascotas/tienda.html">Tienda</a></li>
+                        <li class="footer__li"><a class="footer__a" href="./contacto/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -103,8 +103,8 @@
             <div class="contenedor">
                 <nav class="footer__nav">
                     <ul class="footer__ul">
-                        <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="./img/instagram.jfif" alt="ig"></a></li>
-                        <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="./img/fb.jpg" alt="ig"></a></li>
+                        <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="./img/instagram.jfif" alt="instagram"></a></li>
+                        <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="./img/fb.jpg" alt="facebook"></a></li>
                     </ul>
                 </nav>
             </div>
