--- a/mascotas/tienda.html
+++ b/mascotas/tienda.html
@@ -12,7 +12,7 @@
         <title>Tienda</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
-        <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="../css/compilado.css">
     </head>
     <body>
         <header class="header">
@@ -25,19 +25,19 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav nav__menu">
                                 <li class="nav-item">
-                                    <a class="nav-link active--menu blanco" aria-current="page" href="../vistas/tienda.html">Tienda</a>
+                                    <a class="nav-link active--menu blanco" aria-current="page" href="../mascotas/tienda.html">Tienda</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link blanco" href="../index.html">Index</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/equipo.html">Equipo</a>
+                                    <a class="nav-link blanco" href="../contacto/equipo.html">Equipo</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/proyecto.html">Proyecto</a>
+                                    <a class="nav-link blanco" href="../mascotas/proyecto.html">Proyecto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/contacto.html">Contacto</a>
+                                    <a class="nav-link blanco" href="../contacto/contacto.html">Contacto</a>
                             </ul>
                         </div>
                     </div>
@@ -52,32 +52,32 @@
             <div class="cartas__tienda erizo">
                 <h2 class="cartas__item">Erizo</h2>
                 <p class="cartas__parrafo">Hola me llamo Carlos tengo 2 años y espero me adopten pronto. Soy muy dormilon y me gusta jugar a las escondidas...</p>
-                <button class="cartas__btn"><a class="cartas__a" href="./contacto.html">Adoptar</a></button>
+                <button class="cartas__btn"><a class="cartas__a" href="../contacto/contacto.html">Adoptar</a></button>
             </div>
             <div class="cartas__tienda huron">
                 <h2 class="cartas__item">Hurón</h2>
                 <p class="cartas__parrafo">Hurón de 3 meses listo para llevarselo</p>
-                <button class="cartas__btn"><a class="cartas__a" href="./contacto.html">Adoptar</a></button>
+                <button class="cartas__btn"><a class="cartas__a" href="../contacto/contacto.html">Adoptar</a></button>
             </div>
             <div class="cartas__tienda conejo">
                 <h2 class="cartas__item">Conejo</h2>
                 <p class="cartas__parrafo">Regalo conejo de 5 meses a quien lo quiera cuidar mucho</p>
-                <button class="cartas__btn"><a class="cartas__a" href="./contacto.html">Adoptar</a></button>
+                <button class="cartas__btn"><a class="cartas__a" href="../contacto/contacto.html">Adoptar</a></button>
             </div>
             <div class="cartas__tienda chinchilla">
                 <h2 class="cartas__item">Chinchilla</h2>
-                <p class="cartas__parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit nam similique dolorem. Qui eligendi eveniet omnis deserunt quisquam, dolore nam ullam officiis facere, totam quaerat error ducimus. Eaque, itaque praesentium.</p>
-                <button class="cartas__btn"><a class="cartas__a" href="./contacto.html">Adoptar</a></button>
+                <p class="cartas__parrafo">Soy El Vitor y estoy buscando hogar</p>
+                <button class="cartas__btn"><a class="cartas__a" href="../contacto/contacto.html">Adoptar</a></button>
             </div>
             <div class="cartas__tienda hamster">
                 <h2 class="cartas__item">Hamster</h2>
-                <p class="cartas__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quidem, magnam ratione delectus quo praesentium id repellendus dolor adipisci in autem dicta, dignissimos dolorum modi, assumenda cum facilis! Voluptatum, reiciendis.</p>
-                <button class="cartas__btn"><a class="cartas__a" href="./contacto.html">Adoptar</a></button>
+                <p class="cartas__parrafo">Busco pareja para cruza de Hamster rey de la Patagonia</p>
+                <button class="cartas__btn"><a class="cartas__a" href="../contacto/contacto.html">Adoptar</a></button>
             </div>
             <div class="cartas__tienda cobayo">
                 <h2 class="cartas__item">Cobayo</h2>
                 <p class="cartas__parrafo">Por favor necesito un hogar me porto bien y soy muy amigable</p>
-                <button class="cartas__btn"><a class="cartas__a" href="./contacto.html">Adoptar</a></button>
+                <button class="cartas__btn"><a class="cartas__a" href="../contacto/contacto.html">Adoptar</a></button>
             </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
     </section>
         <section class="contact__tienda">
             <h2 class="contact__h2">Aún tienes dudas?</h2>
-            <button class="contact__btn"><a href="../vistas/contacto.html">Contáctanos</a></button>
+            <button class="contact__btn"><a href="../contacto/contacto.html">Contáctanos</a></button>
         </section>
         <div><h2 class="mascotasinf__h1">Mercado de Insumos</h2></div>
         <section class="cartas">
@@ -146,10 +146,10 @@
             <nav class="footer__nav">
                 <ul class="footer__ul">
                     <li class="footer__li"><a class="footer__a" href="../index.html">Inicio</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/proyecto.html">Proyecto</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/equipo.html">Equipo</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/tienda.html">Tienda</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/contacto.html">Contacto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../mascotas/proyecto.html">Proyecto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../contacto/equipo.html">Equipo</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../mascotas/tienda.html">Tienda</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../contacto/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -159,8 +159,8 @@
         <div class="contenedor">
             <nav class="footer__nav">
                 <ul class="footer__ul">
-                    <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="../img/instagram.jfif" alt="ig"></a></li>
-                    <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="../img/fb.jpg" alt="ig"></a></li>
+                    <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="../img/instagram.jfif" alt="instagram"></a></li>
+                    <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="../img/fb.jpg" alt="facebook"></a></li>
                 </ul>
             </nav>
         </div>
