--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -12,7 +12,7 @@
         <title>Tienda</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
-        <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="../css/compilado.css">
     </head>
     <body>
         <header class="header">
@@ -25,19 +25,19 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav nav__menu">
                                 <li class="nav-item">
-                                    <a class="nav-link active--menu blanco" aria-current="page" href="../vistas/contacto.html">Contacto</a>
+                                    <a class="nav-link active--menu blanco" aria-current="page" href="../contacto/contacto.html">Contacto</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link blanco" href="../index.html">Index</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/equipo.html">Equipo</a>
+                                    <a class="nav-link blanco" href="../contacto/equipo.html">Equipo</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/proyecto.html">Proyecto</a>
+                                    <a class="nav-link blanco" href="../mascotas/proyecto.html">Proyecto</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/tienda.html">Tienda</a>
+                                    <a class="nav-link blanco" href="../mascotas/tienda.html">Tienda</a>
                             </ul>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
             <h1 class="contacto__h1">Club de Mascotas Exóticas</h1>
         </div>
         <section class="formulario">
-            <div class="contenedor">
+            <div class="contenedor__form">
                 <form action="#" method="get" enctype="multipart/form-data" class="formulario__contacto">
                     <fieldset>
                         <legend><strong>Formulario de Contacto</strong></legend>
@@ -113,10 +113,10 @@
             <nav class="footer__nav">
                 <ul class="footer__ul">
                     <li class="footer__li"><a class="footer__a" href="../index.html">Inicio</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/proyecto.html">Proyecto</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/equipo.html">Equipo</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/tienda.html">Tienda</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/contacto.html">Contacto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../mascotas/proyecto.html">Proyecto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../contacto/equipo.html">Equipo</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../mascotas/tienda.html">Tienda</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../contacto/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -126,8 +126,8 @@
         <div class="contenedor">
             <nav class="footer__nav">
                 <ul class="footer__ul">
-                    <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="../img/instagram.jfif" alt="ig"></a></li>
-                    <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="../img/fb.jpg" alt="ig"></a></li>
+                    <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="../img/instagram.jfif" alt="instagram"></a></li>
+                    <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="../img/fb.jpg" alt="facebook"></a></li>
                 </ul>
             </nav>
         </div>
