--- a/mascotas/proyecto.html
+++ b/mascotas/proyecto.html
@@ -12,7 +12,7 @@
         <title>Equipo</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
-        <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="../css/compilado.css">
     </head>
     <body>
         <header class="header">
@@ -25,19 +25,19 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav nav__menu">
                                 <li class="nav-item">
-                                    <a class="nav-link active--menu blanco" aria-current="page" href="../vistas/proyecto.html">Proyecto</a>
+                                    <a class="nav-link active--menu blanco" aria-current="page" href="../mascotas/proyecto.html">Proyecto</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link blanco" href="../index.html">Index</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/equipo.html">Equipo</a>
+                                    <a class="nav-link blanco" href="../contacto/equipo.html">Equipo</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/tienda.html">Tienda</a>
+                                    <a class="nav-link blanco" href="../mascotas/tienda.html">Tienda</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link blanco" href="../vistas/contacto.html">Contacto</a>
+                                    <a class="nav-link blanco" href="../contacto/contacto.html">Contacto</a>
                             </ul>
                         </div>
                     </div>
@@ -50,22 +50,22 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="../img/cobayo2.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/huron.jpg" class="d-block w-100" alt="Hurón">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/Chinchillax.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/Chinchillax.jpg" class="d-block w-100" alt="Chinchilla">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/conejo.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/conejo.jpg" class="d-block w-100" alt="Conejo">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/erizox.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/erizox.jpg" class="d-block w-100" alt="Erizo">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/hamster.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/hamster.jpg" class="d-block w-100" alt="Hamster">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/uron.jpg" class="d-block w-100" alt="...">
+                        <img src="../img/cobayo.jpg" class="d-block w-100" alt="Cobayo">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -86,32 +86,32 @@
                 <div class="mascotasinf__div">
                    <img class="mascotainf__img" src="../img/cobaya.jpeg" alt="Cobayo">
                    <h2 class="mascotainf__h2">Cobayo</h2>
-                   <p class="mascotainf__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis harum odit amet possimus culpa quas magni nihil rem impedit. Aspernatur?</p> 
+                   <p class="mascotainf__p">La cobaya (Cavia porcelus), es un roedor de la familia de los cávidos y proviene de los Andes peruano-bolivianos. Se trata de un roedor herbívoro de tamaño pequeño-medio y de carácter sociable y cariñoso, aunque algo desconfiado al principio.</p> 
                 </div>
                 <div class="mascotasinf__div">
                     <img class="mascotainf__img" src="../img/chinchilla.jpg" alt="Chinchilla">
                     <h2 class="mascotainf__h2">Chinchilla</h2>
-                    <p class="mascotainf__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis harum odit amet possimus culpa quas magni nihil rem impedit. Aspernatur?</p> 
+                    <p class="mascotainf__p">Es de tamaño pequeño y aspecto rechoncho. Los ojos son grandes y las orejas relativamente largas y redondeadas. El hocico es corto y tiene numerosas vibrisas largas. Las patas son muy cortas, en especial las delanteras; todas poseen 4 dedos con uñas débiles.</p> 
                  </div>
                  <div class="mascotasinf__div">
                     <img class="mascotainf__img" src="../img/conejo.jpg" alt="Conejo">
                     <h2 class="mascotainf__h2">Conejo</h2>
-                    <p class="mascotainf__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis harum odit amet possimus culpa quas magni nihil rem impedit. Aspernatur?</p> 
+                    <p class="mascotainf__p">Los conejos y las liebres se caracterizan por su cuerpo recubierto de un pelaje denso y suave, por sus orejas largas y por carecer de cola, o si la tienen, por ser muy corta. Aunque los nombres comunes de conejo y liebre se utilizan indistintamente, ambos representan especies diferentes.</p> 
                  </div>
                  <div class="mascotasinf__div">
                     <img class="mascotainf__img" src="../img/Erizo1.jpg" alt="Erizo">
                     <h2 class="mascotainf__h2">Erizo</h2>
-                    <p class="mascotainf__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis harum odit amet possimus culpa quas magni nihil rem impedit. Aspernatur?</p> 
+                    <p class="mascotainf__p">El erizo es un mamífero insectívoro que mide aproximadamente 24 centímetros y pesa hasta 1 kilogramo y medio. Tienen el lomo cubierto de púas y el resto cubierto de pelo marrón, negro o blanco. Son solitarios y territoriales.</p> 
                  </div>
                  <div class="mascotasinf__div">
                     <img class="mascotainf__img" src="../img/huron.jpg" alt="Húron">
                     <h2 class="mascotainf__h2">Húron</h2>
-                    <p class="mascotainf__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis harum odit amet possimus culpa quas magni nihil rem impedit. Aspernatur?</p> 
+                    <p class="mascotainf__p">El hurón. El hurón (Mustela putorius furo) es un carnivoro de la familia de los Mustélidos. Es un excelente animal de compañía por su tamaño pequeño, su gestión sencilla, su carácter animado y curioso y por su capacidad de relacionarse bien con las personas</p> 
                  </div>
                  <div class="mascotasinf__div">
                     <img class="mascotainf__img" src="../img/hamster.jpg" alt="Hamster">
                     <h2 class="mascotainf__h2">Hamster</h2>
-                    <p class="mascotainf__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis harum odit amet possimus culpa quas magni nihil rem impedit. Aspernatur?</p> 
+                    <p class="mascotainf__p">Los hámster son roedores domesticados de aproximadamente 15 cm de longitud y entre 100 y 180 gramos de peso. Tienen una esperanza de vida muy corta, que va de 1 a 3 años. Alcanzan su madurez sexual a los 2 meses y medio y pueden llegar a tener entre 6 y 8 crías por parto. Los hámster son animales que deben vivir solos</p> 
                  </div>
             </div>
         </section>
@@ -121,10 +121,10 @@
             <nav class="footer__nav">
                 <ul class="footer__ul">
                     <li class="footer__li"><a class="footer__a" href="../index.html">Inicio</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/proyecto.html">Proyecto</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/equipo.html">Equipo</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/tienda.html">Tienda</a></li>
-                    <li class="footer__li"><a class="footer__a" href="../vistas/contacto.html">Contacto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../mascotas/proyecto.html">Proyecto</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../contacto/equipo.html">Equipo</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../mascotas/tienda.html">Tienda</a></li>
+                    <li class="footer__li"><a class="footer__a" href="../contacto/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -134,8 +134,8 @@
         <div class="contenedor">
             <nav class="footer__nav">
                 <ul class="footer__ul">
-                    <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="../img/instagram.jfif" alt="ig"></a></li>
-                    <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="../img/fb.jpg" alt="ig"></a></li>
+                    <li class="footer__redes"><a href="https://www.instagram.com/"><img class="footer__a" src="../img/instagram.jfif" alt="instagram"></a></li>
+                    <li class="footer__redes"><a href="https://www.facebook.com/"><img class="footer__a" src="../img/fb.jpg" alt="Facebook"></a></li>
                 </ul>
             </nav>
         </div>
