agregamos SEO y gif animado en contacto

--- a/mascotas/tienda.html
+++ b/mascotas/tienda.html
@@ -9,6 +9,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Tienda de Mascotas exóticas. Consigue comprar mascotas e insumos para estos pequeños animalitos. Prueba la opción de adoptar mascotas">
+        <meta name="keywords" content="mascota, productos, tienda, tienda de mascotas, pet shop, comida hamster, comprar animal exótico, adoptar mascota, mascotas exoticas, criadero, pet">
         <title>Tienda</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
