--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -9,7 +9,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tienda</title>
+        <meta name="description" content="Ante cualquier duda ponte en contacto con nosotros. El Club de Mascotas Exóticas te ayudará en la compra de tu mascota.">
+        <meta name="keywords" content="mascota, contacto, consulta, tienda, tienda de mascotas, pet shop, club de mascotas exóticas, comprar animal exótico, adoptar mascota, mascotas exoticas, criadero, pet">
+        <title>Contacto</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
         <link rel="stylesheet" href="../css/compilado.css">
@@ -44,6 +46,7 @@
                 </nav>
         </header>
     <main class="main__contacto">
+        <img class="gify" src="../img/adop4.gif" alt="hasmter gif">
         <div class="contacto__titulo">
             <h1 class="contacto__h1">Club de Mascotas Exóticas</h1>
         </div>
