--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lo mejor para tu Mascota Exótica. Veterinaria - Pet Shop  - Criadero. Conocé nuestra nueva tienda y adopta a tu mascota.">
+    <meta name="keywords" content="mascota, huron, hamster, comida hamster, comida conejo, accesorios mascotas, accesorios perro, tienda animales, pet shop, veterinaria, conejo, montevideo, erizo, adoptar mascota, mascotas exoticas, criadero, pet">
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
