--- a/mascotas/proyecto.html
+++ b/mascotas/proyecto.html
@@ -9,6 +9,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Conoce a las mas lindas mascotas Exóticas que tu podrías tener en tu hogar.
+        Características de los animalitos exóticos.">
+        <meta name="keywords" content="mascota, huron, hamster, conejo, erizo, chinchilla, adoptar mascota, mascotas exoticas, criadero, pet">
         <title>Equipo</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="shortcut icon" href="../img/dfb86ff543e6c159abccaf7dd2546772.ico.jpg" type="image/x-icon">
@@ -106,7 +109,7 @@
                  <div class="mascotasinf__div">
                     <img class="mascotainf__img" src="../img/huron.jpg" alt="Húron">
                     <h2 class="mascotainf__h2">Húron</h2>
-                    <p class="mascotainf__p">El hurón. El hurón (Mustela putorius furo) es un carnivoro de la familia de los Mustélidos. Es un excelente animal de compañía por su tamaño pequeño, su gestión sencilla, su carácter animado y curioso y por su capacidad de relacionarse bien con las personas</p> 
+                    <p class="mascotainf__p">El hurón (Mustela putorius furo) es un carnivoro de la familia de los Mustélidos. Es un excelente animal de compañía por su tamaño pequeño, su gestión sencilla, su carácter animado y curioso y por su capacidad de relacionarse bien con las personas</p> 
                  </div>
                  <div class="mascotasinf__div">
                     <img class="mascotainf__img" src="../img/hamster.jpg" alt="Hamster">
